<resources>
    <string name="app_name">tp3_layout</string>
    <string name="profile_icon">Profile icon</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="nome">Nome</string>
    <string name="e_mail">E-mail</string>
    <string name="entrar">Entrar</string>
    <string name="logo">logo</string>
    <string name="resultado">Resultado</string>
    <string name="compartilhar_resultado">Compartilhar Resultado</string>
    <string name="nomee">Nome:</string>
    <string name="e_maill">E-mail:</string>
    <string name="textview">TextView</string>
    <string name="pontua_o">Pontuação:</string>
    <string name="enviar_resultado">Enviar Resultado</string>
    <string name="recome_ar">Recomeçar</string>
</resources>